--- a/.gitignore
+++ b/.gitignore
@@ -1,8 +1,8 @@
-deployments/mysql/data/
-deployments/mysql/log/
+deployments/docker/mysql/data/
+deployments/docker/mysql/log/
 
-deployments/redis/data/
-deployments/redis/log/
+deployments/docker/redis/data/
+deployments/docker/redis/log/
 
 # Binaries for programs and plugins
 *.exe
