build(docker): add dockerfile and docker-compose.yml

--- a/deployments/docker/redis/conf/redis.conf
+++ b/deployments/docker/redis/conf/redis.conf
@@ -352,7 +352,8 @@ loglevel notice
 # Specify the log file name. Also the empty string can be used to force
 # Redis to log on the standard output. Note that if you use standard
 # output for logging but daemonize, logs will be sent to /dev/null
-logfile "/var/log/redis.log"
+# logfile "/var/log/redis.log"
+logfile ""
 
 # To enable logging to the system logger, just set 'syslog-enabled' to yes,
 # and optionally update the other syslog parameters to suit your needs.
@@ -1042,7 +1043,7 @@ acllog-max-len 128
 # The requirepass is not compatible with aclfile option and the ACL LOAD
 # command, these will cause requirepass to be ignored.
 #
-requirepass 123456
+requirepass 12345678
 
 # New users are initialized with restrictive permissions by default, via the
 # equivalent of this ACL rule 'off resetkeys -@all'. Starting with Redis 6.2, it
